--- a/companion/src/simulation/simulatordialog-taranis.ui
+++ b/companion/src/simulation/simulatordialog-taranis.ui
@@ -555,7 +555,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>S1</string>
+           <string/>
           </property>
           <property name="minimum">
            <number>-1024</number>
@@ -585,7 +585,7 @@ QPushButton:checked {
           <item>
            <widget class="QLabel" name="leftXPerc">
             <property name="text">
-             <string>TextLabel</string>
+             <string notr="true">TextLabel</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -595,7 +595,7 @@ QPushButton:checked {
           <item>
            <widget class="QLabel" name="leftYPerc">
             <property name="text">
-             <string>TextLabel</string>
+             <string notr="true">TextLabel</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -619,7 +619,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>SB</string>
+           <string/>
           </property>
           <property name="maximum">
            <number>2</number>
@@ -675,7 +675,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>SA</string>
+           <string/>
           </property>
           <property name="maximum">
            <number>2</number>
@@ -715,7 +715,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>SE</string>
+           <string/>
           </property>
           <property name="maximum">
            <number>2</number>
@@ -743,7 +743,7 @@ QPushButton:checked {
         <item row="3" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>SF</string>
+           <string notr="true">SF</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -765,10 +765,10 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>SF</string>
+           <string/>
           </property>
           <property name="statusTip">
-           <string>SF</string>
+           <string/>
           </property>
           <property name="maximum">
            <number>1</number>
@@ -811,7 +811,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>LS</string>
+           <string/>
           </property>
           <property name="minimum">
            <number>-1024</number>
@@ -833,7 +833,7 @@ QPushButton:checked {
         <item row="3" column="6">
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>SA</string>
+           <string notr="true">SA</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -843,7 +843,7 @@ QPushButton:checked {
         <item row="3" column="8">
          <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>SB</string>
+           <string notr="true">SB</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -853,7 +853,7 @@ QPushButton:checked {
         <item row="3" column="5">
          <widget class="QLabel" name="label_5">
           <property name="text">
-           <string>SE</string>
+           <string notr="true">SE</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -863,7 +863,7 @@ QPushButton:checked {
         <item row="3" column="3">
          <widget class="QLabel" name="label_9">
           <property name="text">
-           <string>LS</string>
+           <string notr="true">LS</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -873,7 +873,7 @@ QPushButton:checked {
         <item row="3" column="10">
          <widget class="QLabel" name="label_10">
           <property name="text">
-           <string>S1</string>
+           <string notr="true">S1</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -1038,7 +1038,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>S2</string>
+           <string/>
           </property>
           <property name="minimum">
            <number>-1024</number>
@@ -1060,7 +1060,7 @@ QPushButton:checked {
         <item row="3" column="1">
          <widget class="QLabel" name="label_11">
           <property name="text">
-           <string>S2</string>
+           <string notr="true">S2</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -1254,7 +1254,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>SD</string>
+           <string/>
           </property>
           <property name="maximum">
            <number>2</number>
@@ -1294,7 +1294,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>SC</string>
+           <string/>
           </property>
           <property name="maximum">
            <number>2</number>
@@ -1360,7 +1360,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>SG</string>
+           <string/>
           </property>
           <property name="maximum">
            <number>2</number>
@@ -1403,7 +1403,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>RS</string>
+           <string/>
           </property>
           <property name="minimum">
            <number>-1024</number>
@@ -1437,7 +1437,7 @@ QPushButton:checked {
            </size>
           </property>
           <property name="toolTip">
-           <string>SH</string>
+           <string/>
           </property>
           <property name="styleSheet">
            <string notr="true"/>
@@ -1468,7 +1468,7 @@ QPushButton:checked {
         <item row="3" column="3">
          <widget class="QLabel" name="label_4">
           <property name="text">
-           <string>SC</string>
+           <string notr="true">SC</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -1478,7 +1478,7 @@ QPushButton:checked {
         <item row="3" column="5">
          <widget class="QLabel" name="label_6">
           <property name="text">
-           <string>SD</string>
+           <string notr="true">SD</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -1488,7 +1488,7 @@ QPushButton:checked {
         <item row="3" column="6">
          <widget class="QLabel" name="label_7">
           <property name="text">
-           <string>SG</string>
+           <string notr="true">SG</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -1498,7 +1498,7 @@ QPushButton:checked {
         <item row="3" column="11">
          <widget class="QLabel" name="label_8">
           <property name="text">
-           <string>SH</string>
+           <string notr="true">SH</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -1508,7 +1508,7 @@ QPushButton:checked {
         <item row="3" column="8">
          <widget class="QLabel" name="label_12">
           <property name="text">
-           <string>RS</string>
+           <string notr="true">RS</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -1526,7 +1526,7 @@ QPushButton:checked {
           <item>
            <widget class="QLabel" name="rightXPerc">
             <property name="text">
-             <string>TextLabel</string>
+             <string notr="true">TextLabel</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -1536,7 +1536,7 @@ QPushButton:checked {
           <item>
            <widget class="QLabel" name="rightYPerc">
             <property name="text">
-             <string>TextLabel</string>
+             <string notr="true">TextLabel</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
