--- a/companion/src/modeledit/mixerdialog.ui
+++ b/companion/src/modeledit/mixerdialog.ui
@@ -204,7 +204,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="0">
         <widget class="QLabel" name="lb_FP0">
          <property name="text">
-          <string>0</string>
+          <string notr="true">0</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -214,7 +214,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="1">
         <widget class="QLabel" name="lb_FP1">
          <property name="text">
-          <string>1</string>
+          <string notr="true">1</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -224,7 +224,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="2">
         <widget class="QLabel" name="lb_FP2">
          <property name="text">
-          <string>2</string>
+          <string notr="true">2</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -234,7 +234,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="3">
         <widget class="QLabel" name="lb_FP3">
          <property name="text">
-          <string>3</string>
+          <string notr="true">3</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -244,7 +244,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="4">
         <widget class="QLabel" name="lb_FP4">
          <property name="text">
-          <string>4</string>
+          <string notr="true">4</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -254,7 +254,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="5">
         <widget class="QLabel" name="lb_FP5">
          <property name="text">
-          <string>5</string>
+          <string notr="true">5</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -264,7 +264,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="6">
         <widget class="QLabel" name="lb_FP6">
          <property name="text">
-          <string>6</string>
+          <string notr="true">6</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -274,7 +274,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="7">
         <widget class="QLabel" name="lb_FP7">
          <property name="text">
-          <string>7</string>
+          <string notr="true">7</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -284,7 +284,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="8">
         <widget class="QLabel" name="lb_FP8">
          <property name="text">
-          <string>8</string>
+          <string notr="true">8</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
