--- a/companion/src/modeledit/setup.ui
+++ b/companion/src/modeledit/setup.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -153,7 +153,7 @@ If this is checked the throttle will be reversed.  Idle will be forward, trim wi
         </font>
        </property>
        <property name="text">
-        <string>Timer2</string>
+        <string>Timer 2</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -169,7 +169,7 @@ If this is checked the throttle will be reversed.  Idle will be forward, trim wi
         </font>
        </property>
        <property name="text">
-        <string>Timer1</string>
+        <string>Timer 1</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
