--- a/companion/src/simulation/simulatordialog-9x.ui
+++ b/companion/src/simulation/simulatordialog-9x.ui
@@ -393,6 +393,9 @@ QPushButton:checked {
             <property name="text">
              <string notr="true">&lt;-</string>
             </property>
+            <property name="autoDefault">
+             <bool>false</bool>
+            </property>
            </widget>
           </item>
           <item>
@@ -428,6 +431,9 @@ QPushButton:checked {
             <property name="text">
              <string notr="true">-&gt;</string>
             </property>
+            <property name="autoDefault">
+             <bool>false</bool>
+            </property>
            </widget>
           </item>
          </layout>
@@ -450,6 +456,9 @@ QPushButton:checked {
             </property>
             <property name="text">
              <string notr="true">^</string>
+            </property>
+            <property name="autoDefault">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
@@ -485,6 +494,9 @@ QPushButton:checked {
             </property>
             <property name="text">
              <string notr="true">v</string>
+            </property>
+            <property name="autoDefault">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
@@ -850,6 +862,9 @@ QPushButton:checked {
             <property name="text">
              <string notr="true">&lt;-</string>
             </property>
+            <property name="autoDefault">
+             <bool>false</bool>
+            </property>
            </widget>
           </item>
           <item>
@@ -885,6 +900,9 @@ QPushButton:checked {
             <property name="text">
              <string notr="true">-&gt;</string>
             </property>
+            <property name="autoDefault">
+             <bool>false</bool>
+            </property>
            </widget>
           </item>
          </layout>
@@ -907,6 +925,9 @@ QPushButton:checked {
             </property>
             <property name="text">
              <string notr="true">^</string>
+            </property>
+            <property name="autoDefault">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
@@ -942,6 +963,9 @@ QPushButton:checked {
             </property>
             <property name="text">
              <string notr="true">v</string>
+            </property>
+            <property name="autoDefault">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
