--- a/companion/src/fwpreferencesdialog.ui
+++ b/companion/src/fwpreferencesdialog.ui
@@ -51,7 +51,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -64,7 +64,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -77,7 +77,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -100,7 +100,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -113,7 +113,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -126,7 +126,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -139,7 +139,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -152,7 +152,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -214,7 +214,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -227,7 +227,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -240,7 +240,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -253,7 +253,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -266,7 +266,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -279,7 +279,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -292,7 +292,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -305,7 +305,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -318,7 +318,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -331,7 +331,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -344,7 +344,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -357,7 +357,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -370,7 +370,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -383,7 +383,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -396,7 +396,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -409,7 +409,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -422,7 +422,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -435,7 +435,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -448,7 +448,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -461,7 +461,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -474,7 +474,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -487,7 +487,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -500,7 +500,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -513,7 +513,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -574,7 +574,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -587,7 +587,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -614,7 +614,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -627,7 +627,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -640,7 +640,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -653,7 +653,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -666,7 +666,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -679,7 +679,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -699,7 +699,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
@@ -712,7 +712,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>FwInfo</string>
+      <string notr="true">FwInfo</string>
      </property>
     </widget>
    </item>
@@ -725,7 +725,7 @@ May be different from firmware language</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>CheckBox</string>
+      <string notr="true">CheckBox</string>
      </property>
     </widget>
    </item>
