--- a/companion/src/printdialog.ui
+++ b/companion/src/printdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>printDialog</class>
- <widget class="QDialog" name="printDialog">
+ <class>PrintDialog</class>
+ <widget class="QDialog" name="PrintDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
