Classes names capitalization

--- a/companion/src/apppreferencesdialog.ui
+++ b/companion/src/apppreferencesdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>appPreferencesDialog</class>
- <widget class="QDialog" name="appPreferencesDialog">
+ <class>AppPreferencesDialog</class>
+ <widget class="QDialog" name="AppPreferencesDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
