--- a/companion/src/apppreferencesdialog.ui
+++ b/companion/src/apppreferencesdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>685</width>
-    <height>775</height>
+    <height>818</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -52,14 +52,21 @@
        <string>Radio Profile</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="1" column="1" colspan="5">
-        <widget class="Line" name="line_8">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
+       <item row="22" column="5">
+        <widget class="QPushButton" name="sdPathButton">
+         <property name="text">
+          <string>Open Folder</string>
          </property>
         </widget>
        </item>
-       <item row="18" column="0">
+       <item row="5" column="1">
+        <widget class="QComboBox" name="downloadVerCB">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="26" column="0">
         <widget class="QLabel" name="label_13">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -75,18 +82,91 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
+       <item row="10" column="0">
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>Firmware Options</string>
+          <string>Build Options</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
          </property>
         </widget>
        </item>
-       <item row="5" column="1" colspan="5">
+       <item row="8" column="0">
+        <widget class="QLabel" name="langLabel">
+         <property name="text">
+          <string>Menu Language</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="24" column="0">
+        <widget class="QLabel" name="label_14">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Default Stick Mode</string>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="5">
+        <widget class="QPushButton" name="SplashSelect">
+         <property name="text">
+          <string>Select Image</string>
+         </property>
+        </widget>
+       </item>
+       <item row="23" column="1">
+        <widget class="QLabel" name="lblGeneralSettings">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string notr="true">General Settings Label</string>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="3">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="11" column="0" colspan="6">
+        <widget class="Line" name="line_7">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="1" colspan="5">
         <layout class="QGridLayout" name="gridLayout_5">
+         <item row="0" column="1">
+          <widget class="QCheckBox" name="optionCheckBox_2">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string notr="true">CheckBox</string>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="0">
           <widget class="QCheckBox" name="optionCheckBox_1">
            <property name="sizePolicy">
@@ -115,19 +195,6 @@
          </item>
          <item row="0" column="3">
           <widget class="QCheckBox" name="optionCheckBox_4">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string notr="true">CheckBox</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QCheckBox" name="optionCheckBox_2">
            <property name="sizePolicy">
             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -635,31 +702,17 @@
          </item>
         </layout>
        </item>
-       <item row="3" column="0">
+       <item row="6" column="0">
         <widget class="QLabel" name="CPU_ID_LABEL">
          <property name="text">
           <string>Processor ID</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="1" colspan="5">
-        <widget class="Line" name="line_7">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
+       <item row="6" column="1">
         <widget class="QLineEdit" name="CPU_ID_LE"/>
        </item>
-       <item row="15" column="1" colspan="5">
-        <widget class="Line" name="line_6">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="16" column="1" colspan="3">
+       <item row="24" column="1" colspan="3">
         <widget class="QComboBox" name="stickmodeCB">
          <property name="maximumSize">
           <size>
@@ -713,7 +766,7 @@ Mode 4:
          </item>
         </widget>
        </item>
-       <item row="10" column="0">
+       <item row="15" column="0">
         <widget class="QLabel" name="label_8">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -721,63 +774,18 @@ Mode 4:
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
           <string>Splash Screen</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="0">
-        <widget class="QLabel" name="sdPathLabel">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>SD Structure path</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="1" colspan="2">
-        <widget class="QLineEdit" name="sdPath">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>350</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>350</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="readOnly">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="4">
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="18" column="1" colspan="3">
+       <item row="26" column="1" colspan="3">
         <widget class="QComboBox" name="channelorderCB">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -925,27 +933,20 @@ Mode 4:
          </item>
         </widget>
        </item>
-       <item row="16" column="0">
-        <widget class="QLabel" name="label_14">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>Default Stick Mode</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
+       <item row="1" column="0">
         <widget class="QLabel" name="label_2">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
           <string>Profile Name</string>
          </property>
         </widget>
        </item>
-       <item row="21" column="1">
+       <item row="29" column="1">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -958,21 +959,14 @@ Mode 4:
          </property>
         </spacer>
        </item>
-       <item row="20" column="5">
+       <item row="28" column="5">
         <widget class="QPushButton" name="removeProfileButton">
          <property name="text">
           <string>Remove Profile</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="5">
-        <widget class="QPushButton" name="sdPathButton">
-         <property name="text">
-          <string>Open Folder</string>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="1" colspan="2">
+       <item row="15" column="1" colspan="2">
         <widget class="QLineEdit" name="SplashFileName">
          <property name="enabled">
           <bool>true</bool>
@@ -994,35 +988,14 @@ Mode 4:
          </property>
         </widget>
        </item>
-       <item row="10" column="5">
-        <widget class="QPushButton" name="SplashSelect">
-         <property name="text">
-          <string>Select Image</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Radio Type</string>
-         </property>
-        </widget>
-       </item>
-       <item row="13" column="5">
+       <item row="18" column="5">
         <widget class="QPushButton" name="clearImageButton">
          <property name="text">
           <string>Clear Image</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="1" colspan="5">
-        <widget class="Line" name="line_3">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
+       <item row="1" column="1">
         <widget class="QLineEdit" name="profileNameLE">
          <property name="minimumSize">
           <size>
@@ -1038,7 +1011,7 @@ Mode 4:
          </property>
         </widget>
        </item>
-       <item row="13" column="1">
+       <item row="18" column="1">
         <widget class="QLabel" name="imageLabel">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -1075,87 +1048,21 @@ Mode 4:
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
-        <widget class="QComboBox" name="radioCB">
-         <item>
-          <property name="text">
-           <string>9X</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>9X with m128</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>9XR</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>9XR with m128</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Gruvin9x Board</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Sky9x Board</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Taranis</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="7" column="0">
-        <widget class="QLabel" name="label_4">
-         <property name="text">
-          <string>General Settings</string>
-         </property>
-        </widget>
-       </item>
-       <item row="19" column="1" colspan="4">
+       <item row="27" column="1" colspan="4">
         <widget class="QCheckBox" name="renameFirmware">
          <property name="text">
           <string>Append version number to FW file name</string>
          </property>
         </widget>
        </item>
-       <item row="20" column="1" colspan="4">
+       <item row="28" column="1" colspan="4">
         <widget class="QCheckBox" name="burnFirmware">
          <property name="text">
           <string>Offer to write FW to Tx after download</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="1" colspan="5">
-        <widget class="QLabel" name="lblGeneralSettings">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="text">
-          <string notr="true">General Settings Label</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="langLabel">
-         <property name="text">
-          <string>Menu Language</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
+       <item row="8" column="1">
         <widget class="QComboBox" name="langCombo">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -1168,6 +1075,129 @@ Mode 4:
            <width>50</width>
            <height>16777215</height>
           </size>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QLabel" name="label_7">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <family>Sans Serif</family>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Radio Firmware</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="22" column="1">
+        <widget class="QLineEdit" name="sdPath">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>350</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>350</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="20" column="0" colspan="6">
+        <widget class="Line" name="line_6">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0" colspan="6">
+        <widget class="Line" name="line_8">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="21" column="0">
+        <widget class="QLabel" name="label">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Other Settings</string>
+         </property>
+        </widget>
+       </item>
+       <item row="23" column="0">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>General Settings</string>
+         </property>
+        </widget>
+       </item>
+       <item row="22" column="0">
+        <widget class="QLabel" name="sdPathLabel">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>SD Structure path</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="1">
+        <widget class="QComboBox" name="voiceCombo">
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="toolTip">
+          <string>Set language of voice.
+May be different from firmware language</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0">
+        <widget class="QLabel" name="voiceLabel">
+         <property name="font">
+          <font>
+           <family>Sans Serif</family>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Voice Language</string>
          </property>
         </widget>
        </item>
@@ -1637,7 +1667,6 @@ Mode 4:
   <tabstop>joystickCB</tabstop>
   <tabstop>joystickChkB</tabstop>
   <tabstop>joystickcalButton</tabstop>
-  <tabstop>sdPath</tabstop>
   <tabstop>SplashFileName</tabstop>
   <tabstop>stickmodeCB</tabstop>
   <tabstop>channelorderCB</tabstop>
@@ -1655,8 +1684,8 @@ Mode 4:
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>382</x>
-     <y>455</y>
+     <x>388</x>
+     <y>835</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -1671,8 +1700,8 @@ Mode 4:
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>402</x>
-     <y>455</y>
+     <x>408</x>
+     <y>835</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
